# NavTracking

./: .gitignore  Cargo.toml  README.md  local_db_orm.py  nav_app.sqlite  requirements.txt  sandbox.py
.github/workflows/: rust.yml
api/: main.py
api_server/: Cargo.toml
api_server/info/: tracker_service
api_server/src/: main.rs
api_server/src/database/: mod.rs
api_server/src/lora_data/: mod.rs  payload.rs  received_data.rs
api_server/src/parsers/: mod.rs
api_server/src/web/: mod.rs  routes_handlers.rs
api_server/test/: lora_request.http
data/: chart_view.py  data_parcer.py  gps_log.txt  local_db_orm.py  nmea_sentances_parcer.py  parsed.yaml  parsed_list.yaml
devices_src/: M5Core2_gnss_tiny.ino  M5Core2_nmea.ino  M5_capsule_GPS_updated.ino  wireles_tracer.ino  wireless_tracker_lora_wan.ino
historical/: requirements.txt
historical/api/: main.py
historical/python_flet/: main.py  test_app.py
historical/python_flet/elements/: controls.py  map_objects.py
historical/python_flet/elements/utils/: db_tools.py
monitoring-app/: Cargo.toml  Dioxus.toml  README.md
monitoring-app-outdated/src/: main.rs
monitoring-app-outdated/src/pages/: details.rs  login.rs  selection.rs
monitoring-app-outdated/src/pages/common/: mod.rs
monitoring-app-v01/: Cargo.toml  Dioxus.toml  config.toml
monitoring-app-v01/assets/: map_template.html
monitoring-app-v01/src/: config.rs  main.rs
monitoring-app-v01/src/components/: date_selector.rs  dropdown.rs  mod.rs
monitoring-app-v01/src/pages/: home.rs  livemap.rs  map.rs  mod.rs  selector.rs
monitoring-app-v01/src/utils/: mod.rs
monitoring-app-v01/static/assets/: main.css  map_template.html
monitoring-app/src/: app.rs  main.rs
monitoring-app/src-tauri/: Cargo.toml  tauri.conf.json
monitoring-app/src-tauri/src/: lib.rs  main.rs
monitoring-app/src/pages/: details.rs  login.rs  map.rs  mod.rs
monitoring-app/src/pages/common/: mod.rs
src/: chart_view.py  gps_plus_file_parser.py  main.py  nav_app.sqlite  test_app.py
src/devices_src/: M5Capsule_gps_config.ino  cardputer_gps.ino  csv_parser.py  lora_raspberry_pi.py  wireles_tracer.ino
src/elements/: controls.py  map_objects.py
src/elements/utils/: db_tools.py
src/helpers/: utility.py
