[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
mongodb = "3.2.3"
axum-auth = "0.8.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
base64 = "0.22.1"
futures = "0.3.31"
