[package]
name = "api-server"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
mongodb = "3.3.0"
axum-auth = "0.8.1"
chrono = "0.4.39"
base64 = "0.22.1"
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"