[package]
name = "monitoring-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"

js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

leaflet = "0.4.1"

dioxus = { version = "0.5.6", features = ["web"] }
dioxus-logger = "0.5.1"
gloo-utils = "0.2.0"

web-sys = "0.3.69"
