[package]
name = "monitoring-app-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }


[workspace]
members = ["src-tauri"]