[package]
name = "monitoring-app-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.1", features = ["web", "router"] }
dioxus-logger = "0.6.1"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
js-sys = "0.3"
serde = { version = "1.0.216", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }


[workspace]
members = ["src-tauri"]